add unit tests for angle and voltage cnecs